# programmingCourse

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/generating/: generating.c  generating.h
libs/algorithms/sorts/: sorts.c  sorts.h
libs/algorithms/sorts/test_sorts/: test_sorts.c  test_sorts.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string.c  string.h
libs/data_structures/string/tasks/: tasks.c  tasks.h
libs/data_structures/string/tasks/test_tasks/: test_tasks.c  test_tasks.h
libs/data_structures/string/test_functions/: test_functions.c  test_functions.h
libs/data_structures/vector/: vector.c  vector.h
